@@ -4,32 +4,42 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>learning.com</groupId>
     <artifactId>the-cucumber-for-java-book</artifactId>
+    <version>0-SNAPSHOT</version>
 
     <properties>
-        <cucumer.version>1.2.5</cucumer.version>
+        <cucumber.version>1.2.5</cucumber.version>
         <assertj.version>3.7.0</assertj.version>
+        <picocontainer.version>3</picocontainer.version>
+        <jetty.version>9.4.5.v20170502</jetty.version>
+        <servlet.version>3.0.0.v201112011016</servlet.version>
     </properties>
-
 
     <dependencies>
         <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <!--test dependencies -->
+        <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-core</artifactId>
-            <version>${cucumer.version}</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>${cucumer.version}</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>${cucumer.version}</version>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -38,26 +48,48 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
-
-
-        <!--<dependency>-->
-        <!--<groupId>info.cukes</groupId>-->
-        <!--<artifactId>gherkin</artifactId>-->
-        <!--<version>2.12.2</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-        <!--<groupId>info.cukes</groupId>-->
-        <!--<artifactId>cucumber-jvm-deps</artifactId>-->
-        <!--<version>1.0.5</version>-->
-        <!--</dependency>-->
-
-
-        <!--<dependency>-->
-        <!--<groupId>info.cukes</groupId>-->
-        <!--<artifactId>cucumber-java8</artifactId>-->
-        <!--<version>1.2.5</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>picocontainer</groupId>
+            <artifactId>picocontainer</artifactId>
+            <version>${picocontainer.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.4.0</version>
+        </dependency>
 
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
+
+    <!--<build>-->
+    <!--<plugins>-->
+    <!--<plugin>-->
+    <!--<groupId>org.apache.maven.plugins</groupId>-->
+    <!--<artifactId>maven-surefire-plugin</artifactId>-->
+    <!--<version>2.12.2</version>-->
+    <!--<configuration>-->
+    <!--<argLine>-Duser.language=en</argLine>-->
+    <!--<argLine>-Xmx1024m</argLine>-->
+    <!--<argLine>-XX:MaxPermSize=256m</argLine>-->
+    <!--<argLine>-Dfile.encoding=UTF-8</argLine>-->
+    <!--<useFile>false</useFile>-->
+    <!--</configuration>-->
+    <!--</plugin>-->
+    <!--</plugins>-->
+    <!--</build>-->
 </project>
